--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -38,7 +38,7 @@
     </div>
     <div class="mb-3">
         {{ form.submit(class='btn btn-primary',
-        placeholder=form.password_again.label.text) }}
+        placeholder=form.submit.label.text) }}
     </div>
 
 </form>
