--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="/">АМБАССАДОРЫ</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -42,12 +43,40 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link active" aria-current="page" href="#">Главная</a>
                 </li>
+                <!--                <li class="nav-item">-->
+                <!--                    <a class="nav-link" href="#">Link</a>-->
+                <!--                </li>-->
+                <!--                <li class="nav-item dropdown">-->
+                <!--                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"-->
+                <!--                       data-bs-toggle="dropdown" aria-expanded="false">-->
+                <!--                        Dropdown-->
+                <!--                    </a>-->
+                <!--                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">-->
+                <!--                        <li><a class="dropdown-item" href="#">Action</a></li>-->
+                <!--                        <li><a class="dropdown-item" href="#">Another action</a></li>-->
+                <!--                        <li>-->
+                <!--                            <hr class="dropdown-divider">-->
+                <!--                        </li>-->
+                <!--                        <li><a class="dropdown-item" href="#">Something else here</a></li>-->
+                <!--                    </ul>-->
+                <!--                </li>-->
+                <!--                <li class="nav-item">-->
+                <!--                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
+                <!--                </li>-->
             </ul>
+            {% if current_user.is_authenticated %}
+            {{ current_user.name }}
+            <!--            <a href="{{ url_for('user.user_page', user_id=current_user.get_id()) }}"-->
+            <!--               class="user-name">{{ current_user.login }}</a>-->
+            <!--            <a class="button-link logout-button" href="{{ url_for('user.logout') }}">Выйти</a>-->
+            {% else %}
             <form class="d-flex">
                 <a href="/register" type="button" class="btn btn-primary" style="margin-right: 15px;">Регистрация</a>
                 <a href="/login" type="button" class="btn btn-success">Авторизация</a>
             </form>
+            {% endif %}
         </div>
     </div>
 </nav>
