--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,8 +2,19 @@
 
 {% block content %}
 <h1>Объявления</h1>
+{% if current_user.role %}
+<a href="/add_advert" type="button" class="btn btn-secondary" style="margin-right: 15px;">Добавить товар</a>
+{% endif %}
 {% for item in adverts %}
-    item.title<br>
-    item.description<br>
+    <div class="a">
+        <h2>{{ item.title }}</h2><br>
+        {{ item.description }}<br>
+        {% if item.user == current_user %}
+        <a href="/edit_advert/{{ item.id }}" type="button" class="btn btn-primary" style="margin-right: 15px;">Редактировать</a>
+        <a href="/delete_advert/{{ item.id }}" type="button" class="btn btn-danger" style="margin-right: 15px;">Удалить</a>
+        {% else %}
+        <a href="/edit_advert/{{ item.id }}" type="button" class="btn btn-primary" style="margin-right: 15px;">Добавить в корзину</a>
+        {% endif %}
+    </div>
 {% endfor %}
 {% endblock %}
